--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,19 @@ body {
 .gradient-border {
   border-image: linear-gradient(to right, #3f39ff, #ff80ec) 1;
 }
+
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-20px);
+  }
+  60% {
+    transform: translateY(-10px);
+  }
+}
